# mcpProjects

rss-server/: Dockerfile  main.py  pyproject.toml
